--- a/frontend/templates/health.html
+++ b/frontend/templates/health.html
@@ -4,7 +4,8 @@
 {% block page_title %}System Health{% endblock %}
 
 {% block content %}
-{% if error %}
+<div class="content-area">
+    {% if error %}
     <div class="alert alert-danger mb-6">
         <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path>
@@ -159,7 +160,8 @@
             </div>
         </div>
     </div>
-{% endif %}
+    {% endif %}
+</div>
 {% endblock %}
 
 {% block scripts %}
